fix: carousel one slide mode, collapse head button

--- a/src/components/Carousel/Carousel.module.css
+++ b/src/components/Carousel/Carousel.module.css
@@ -41,6 +41,11 @@
   border: none;
 }
 
+.oneSlide .prev,
+.oneSlide .next {
+  display: none;
+}
+
 .next {
   right: 0;
 }
