--- a/src/components/Collapse/Collapse.module.css
+++ b/src/components/Collapse/Collapse.module.css
@@ -8,9 +8,12 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  width: 100%;
   position: relative;
   background-color: var(--primary-color);
   color: white;
+  border: none;
+  cursor: pointer;
 }
 
 .collapse.medium .head,
@@ -35,24 +38,22 @@
   padding: 12px 33px 12px 18px;
 }
 
-.head button {
+.head .arrowIcon {
   width: 26px;
   height: 100%;
   padding: 0;
   transition: 0.3s ease-out;
   user-select: none;
   background: none;
-  border: none;
-  cursor: pointer;
 }
 
-.head button svg {
+.head .arrowIcon svg {
   display: inline-block;
   height: 100%;
   width: 100%;
 }
 
-.head button svg * {
+.head .arrowIcon svg * {
   color: white;
 }
 
@@ -110,7 +111,7 @@
     line-height: 17px;
   }
 
-  .collapse.large .head button svg {
+  .collapse.large .head .arrowIcon svg {
     width: 9px;
   }
 }
